--- a/layouts/posts/posts.html
+++ b/layouts/posts/posts.html
@@ -10,23 +10,11 @@
           <div class="mb-8 lg:mb-0 prose prose-lg prose:stone dark:prose-invert lg:max-w-none">
             {{ partial "posts-blurb.html" . }}
           </div>
-          <div>
+          <ul class="lg:ml-1">
             {{ range .Pages }}
-            <div class="mb-2 hover:shadow py-2 px-3">
-              <a href="{{ .Permalink }}" class="block">
-                <h1 class="text-xl font-semibold text-stone-900 dark:text-stone-300">
-                  {{ .Title }}
-                </h1>
-                <p class="text-sm text-stone-500 dark:text-stone-400">
-                  <time datetime="{{.Date.Format "2006-01-02"}}">{{.Date.Format "Jan 2, 2006"}}</time>
-                </p>
-                <p class="mt-3 text-base text-stone-500 dark:text-stone-300">
-                  {{ .Params.description }}
-                </p>
-              </a>
-            </div>
+            <li>{{ partial "post-summary.html" . }}</li>
             {{ end }}
-          </div>
+          </ul>
         </div>
     </div>
 </div>
