Add (empty) analytics.html partial

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,5 +10,6 @@
   Main block - should be overridden in other templates.
   {{ end }}
   </div>
+    {{- partial "analytics.html" . -}}
   </body>
 </html>
